grammars/tree-sitter-redextape-asm/test/corpus/comments.txt
================================================================================
a whole-line comment before an instruction
================================================================================

; what this does
    halt

--------------------------------------------------------------------------------

(source_file
  (comment)
  (nullary_instruction))

================================================================================
a trailing comment after an instruction
================================================================================

    halt  ; done

--------------------------------------------------------------------------------

(source_file
  (nullary_instruction)
  (comment))

================================================================================
an empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)
