grammars/tree-sitter-redextape-asm/test/corpus/labels.txt
================================================================================
a label declaration followed by an instruction
================================================================================

retry:
    halt

--------------------------------------------------------------------------------

(source_file
  (label
    name: (identifier))
  (nullary_instruction))

================================================================================
a label whose name carries a dot and digits
================================================================================

count_down.0:
    halt

--------------------------------------------------------------------------------

(source_file
  (label
    name: (identifier))
  (nullary_instruction))

================================================================================
a label spelled exactly like a mnemonic
================================================================================

halt:
    halt

--------------------------------------------------------------------------------

(source_file
  (label
    name: (identifier))
  (nullary_instruction))

================================================================================
a label spelled exactly like the result keyword
================================================================================

result:
    halt

--------------------------------------------------------------------------------

(source_file
  (label
    name: (identifier))
  (nullary_instruction))
