grammars/tree-sitter-redextape-rxm/test/corpus/header.txt
================================================================================
a header-less listing with one nullary instruction
================================================================================

    halt

--------------------------------------------------------------------------------

(source_file
  (nullary_instruction))

================================================================================
a headered listing: result, a blank line, then the listing
================================================================================

result Nat

    halt

--------------------------------------------------------------------------------

(source_file
  (result
    type: (identifier))
  (nullary_instruction))

================================================================================
a nested result type
================================================================================

result List<List<Nat>>

    halt

--------------------------------------------------------------------------------

(source_file
  (result
    type: (identifier))
  (nullary_instruction))
