grammars/tree-sitter-redextape-rxm/test/corpus/instructions.txt
================================================================================
a nullary instruction, both mnemonics
================================================================================

    ret
    halt

--------------------------------------------------------------------------------

(source_file
  (nullary_instruction)
  (nullary_instruction))

================================================================================
a reg instruction
================================================================================

    nil	r0

--------------------------------------------------------------------------------

(source_file
  (reg_instruction
    (register)))

================================================================================
a reg_reg instruction
================================================================================

    mov	r0, r1

--------------------------------------------------------------------------------

(source_file
  (reg_reg_instruction
    (register)
    (register)))

================================================================================
a reg_reg_reg instruction
================================================================================

    add	r0, r1, r2

--------------------------------------------------------------------------------

(source_file
  (reg_reg_reg_instruction
    (register)
    (register)
    (register)))

================================================================================
an imm instruction
================================================================================

    li	r0, #5

--------------------------------------------------------------------------------

(source_file
  (imm_instruction
    (register)
    (immediate)))

================================================================================
a branch instruction
================================================================================

    jz	r0, retry

--------------------------------------------------------------------------------

(source_file
  (branch_instruction
    (register)
    target: (identifier)))

================================================================================
a jump instruction, both mnemonics
================================================================================

    jmp	done
    call	foo

--------------------------------------------------------------------------------

(source_file
  (jump_instruction
    target: (identifier))
  (jump_instruction
    target: (identifier)))
